создал класс конфиг,создал бота,добавил библиотеку для телеграмбота,aplication properties добавил базу и токен.

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=
+spring.datasource.driver-class-name=
+spring.jpa.database-platform=
 
+spring.jpa.hibernate.ddl-auto=update
+
+
+server.port=8080
+
+telegram.bot.token=6746015075:AAGIdRiLIItXJNQ8r0GBs8t65jZYf2WyPzg
