--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
-spring.datasource.username=postgres
-spring.datasource.password=Victor1988
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 telegram.bot.token=6600283868:AAF81R4IV1DeLgBhi6EFzd9PSnoBOlV1Pl0
