Добавил javaDoc для сервисных методов

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
-spring.datasource.username=
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.username=postgres
+spring.datasource.password=Victor1988
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 telegram.bot.token=6600283868:AAF81R4IV1DeLgBhi6EFzd9PSnoBOlV1Pl0
 
