--- a/Animals/pom.xml
+++ b/Animals/pom.xml
@@ -33,12 +33,16 @@
 			<version>5.7.0</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.github.pengrad</groupId>-->
+<!--			<artifactId>java-telegram-bot-api</artifactId>-->
+<!--			<version>5.7.0</version>-->
+<!--		</dependency>-->
 		<dependency>
-			<groupId>com.github.pengrad</groupId>
-			<artifactId>java-telegram-bot-api</artifactId>
-			<version>5.7.0</version>
+			<groupId>org.telegram</groupId>
+			<artifactId>telegrambots</artifactId>
+			<version>6.8.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
