--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
-spring.datasource.username=postgres
-spring.datasource.password=Victor1988
+
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
-telegram.bot.token=6600283868:AAF81R4IV1DeLgBhi6EFzd9PSnoBOlV1Pl0
 
+telegram.bot.name=@for_myAnimals_bot
+telegram.bot.token=6642060006:AAH_3YLCKp5kaGYtpQoIuI53L2_ZT6GcnZs
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jackson.serialization.fail-on-empty-beans=false
