Провел рефакторинг кода бота: перераспределил его части по соответствующим им репозиториям. Исправил некоторые огрехи в javadoc методов сервисов. Добавил сущность стандартных сообщений, которые используются для ответа клиенту, а также сервис и контроллер для их редактирования. Создал Enum для поля petVariety сущности Pet и ввел его в сущность.

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
