Добавил контроллер, сервис и репозиторий для создания и хранения аватарок питомцев

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
-spring.datasource.username=postgres
-spring.datasource.password=Victor1988
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
@@ -10,3 +10,5 @@ telegram.bot.token=6642060006:AAH_3YLCKp5kaGYtpQoIuI53L2_ZT6GcnZs
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+pet.avatar.dir.path=avatar
