Доработка по удалению лишней активности

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 server.port=8080
-telegram.bot.name=@for_myAnimals_bot
-telegram.bot.token=6642060006:AAH_3YLCKp5kaGYtpQoIuI53L2_ZT6GcnZs
+telegram.bot.name=@Business_Alarm_bot
+telegram.bot.token=6732819796:AAGat1sNY3-FxgDIrG4QZgXC782_jZrY4rI
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jackson.serialization.fail-on-empty-beans=false
