Написал свою версию telegrambot, в настоящий момент ещё не включающей в себя scheduler, функции, связанные с изменением испытательного срока, сохранение отчётов о состоянии животных и тесты к сервисам

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=postgres
+spring.datasource.password=Victor1988
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
 
-telegram.bot.name=@for_myAnimals_bot
-telegram.bot.token=6642060006:AAH_3YLCKp5kaGYtpQoIuI53L2_ZT6GcnZs
+telegram.bot.name=@my_animals_bot_bot
+telegram.bot.token=5680692137:AAEE25visAIJBX9O3thGwNRoYOKVseissXE
+
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jackson.serialization.fail-on-empty-beans=false
