Убрал логины и пароли из application.properties

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
-spring.datasource.username=postgres
-spring.datasource.password=Victor1988
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
 
-telegram.bot.name=@my_animals_bot_bot
-telegram.bot.token=5680692137:AAEE25visAIJBX9O3thGwNRoYOKVseissXE
+telegram.bot.name=
+telegram.bot.token=
 
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
