Не работает загрузка картинок из чата (см. строку 617 PetShelterTelegramBot)

--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 spring.jackson.serialization.fail-on-empty-beans=false
 
 pet.avatar.dir.path=avatar
+daily.report.dir.path=report
