--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 telegram.bot.name=
 telegram.bot.token=
 
-spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+#spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 
 spring.jackson.serialization.fail-on-empty-beans=false
 
