--- a/Animals/src/main/resources/application.properties
+++ b/Animals/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:1988/pet_shelter_db
 spring.datasource.username=
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 telegram.bot.name=
